# 100_dayes_of_code_python

./: .gitignore  pyproject.toml
16_day/16_day_coffee_machine/: main.py  pyproject.toml  replit_zip_error_log.txt
16_day/16_day_start/: main.py  pyproject.toml
17_day/quiz_project/: data.py  main.py  pyproject.toml  quiz_brain.py
17_day/start/: main.py  pyproject.toml
18_day(Turtle)/spot_paintingg/: main.py  pyproject.toml
18_day(Turtle)/start/: main.py  pyproject.toml
20-21_day(snake)/: food.py  main.py  pyproject.toml  snake.py
20-21_snake/: main.py  scoreboard.py  snake.py
22_day(pong)/: main.py  paddle.py
22_day_pong/: pong.py  pyproject.toml  score.py
23/: pyproject.toml
23_day/: car_manager.py  main.py  player.py  scoreboard.py
24/: pyproject.toml
26_day(NATO_Alphabet)/: dick_comp.py  list_comp.py  looping_through_daataFrame.py  pyproject.toml
27_day(miles_to_km)/: main.py  miles_to_km_convertor.py  playground.py  pyproject.toml
28_day(pomodoro)/: main.py  pyproject.toml
29_day(password_manager)/: data.json  main.py  myfile.txt  password_gen.py
30_day/: main.py
31_day(flash_card_app)/: main.py  words.csv  words_to_learn.csv
32_day(smtplib)/: auto_birthday_wisher.py  birthdays.csv  motivational_quotes_on_mondays.py  practice.py
33_day(API)/: practice.py
34_day(API_quiz)/: data.py  main.py  quiz_brain.py  ui.py
35_day/: main.py  twilio_sender.py
36_day/: main.py  stock_data.py
37_day/: main.py
38_day/: main.py
39_day/: data_manager.py  flight_data.py  flight_search.py  main.py  notification_manager.py
(+44 files in other folders)
