[tool.poetry]
name = "100-dayes-of-code-python"
version = "0.1.0"
description = ""
authors = ["Fuffes <Fuffes05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
twilio = "^9.5.2"
python-dotenv = "^1.1.0"
newsapi = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
